# ha-dashboard

./: .env.local.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/core/: config.py  nav.py  registry.py  security.py  templating.py
app/models/: __init__.py  ha_credential.py  host_user.py
app/pages/: ha_dashboard.py  ha_dashboard_tiles.py  settings_fragments.py
app/schemas/: ha_credential.py  ha_summary.py
app/services/: host_user.py
app/services/ha_client/: __init__.py  client.py  errors.py  transport.py
app/templates/pages/: ha_dashboard.html
app/templates/partials/: ha_dashboard_test_connection_result.html  ha_dashboard_tiles.html  settings_ha_dashboard.html  settings_reauth_required.html
docs/: changelog.md
docs/adr/: ha-dashboard-credential-storage.md  ha-dashboard-ha-client-module-boundary.md
docs/features/ha-dashboard/WBS/: slice-1-repo-and-infra-setup.md  slice-2-sso-trust-tracer-bullet.md  slice-3-ha-connection-settings.md  slice-4-live-dashboard-tiles.md
migrations/: env.py
migrations/versions/: 0001_create_ha_dashboard_schema.py  0002_grant_host_users_references.py  0003_create_ha_credential.py
scripts/: build_css.py
scripts/ci/: bootstrap_host_users.sql
tests/: conftest.py  test_ha_client.py  test_ha_credential_model.py  test_ha_credential_settings.py  test_ha_dashboard_page.py  test_ha_dashboard_tiles.py  test_host_user_model.py  test_registry_client_wiring.py
